nop bai html/css

--- a/index.html
+++ b/index.html
@@ -159,63 +159,102 @@
               </section>
               <!-- End BLock-3 ! -->
             </div>
+
+            <!-- body-right -->
             <div class="body-right">
-                <div class="block-medium block-first">
+                <div class="block-first">
                     <img class="block-first__img" src="./images/avatar_girl2.jpg" alt="">
                     <div class="block-first__content">
-                        <h5 >My Name</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, illo. Aperiam iure possimus nihil qui id, modi magni soluta temporibus doloribus placeat debitis optio blanditiis vitae, necessitatibus dolorum nam impedit.</p>
+                        <h5 class="sub-title" >My Name</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur. Volupatum, illo. Aperiam iure possimus nihil qui id, modi magni soluta temporibus doloribus placeat debitis optio impedit.</p>
                     </div>
                   
                 </div>
-                <div class="block-medium">
+                <div class="block-posts">
                     <h5 class="sub-title">Popular Posts</h5>
+                    <ul class="block-posts__list">
+                        <li class="block-posts__item">
+                            <img class="img__size--small" src="./images/avatar_smoke.jpg" alt="avatar_smoke">
+                            <span>
+                                <p class="text__size--medium">Denim</p>
+                                <p>Sed mattis nunc</p>
+                            </span>
+                        </li>
+                        <li class="block-posts__item">
+                            <img class="img__size--small" src="./images/bandmember.jpg" alt="bandmember-image">
+                            <span>
+                                <p class="text__size--medium">Sweater</p>
+                                <p>Praes tinic sed</p>
+                            </span>
+                        </li>
+                        <li class="block-posts__item">
+                            <img class="img__size--small" src="./images/workshop.jpg" alt="workshop-image">
+                            <span>
+                                <p class="text__size--medium">Workshop</p>
+                                <p>Ultricies</p>
+                            </span>
+                        </li>
+                        <li class="block-posts__item">
+                            <img class="img__size--small" src="./images/avatar_smoke.jpg" alt="avatar_smoke">
+                            <span>
+                                <p class="text__size--medium">Trends</p>
+                                <p>Lorem ipsum dipsum</p>
+                            </span>
+                        </li>
+                    </ul>
                 </div>
-                <div class="block-medium">
+                <div class="block-advertise">
                     <h5 class="sub-title">Advertise</h5>
                     <p>Your AD here</p>
                 </div>
-                <div class="block-small">
+                <div class="block-tags">
                     <h5 class="sub-title">Tags</h5>
-                    <ul>
-                        <li>Fashion</li>
-                        <li>New York</li>
-                        <li>London</li>
-                        <li>Hats</li>
-                        <li>Norway</li>
-                        <li>Sweaters</li>
-                        <li>Ideas</li>
-                        <li>Deals</li>
-                        <li>Accessories</li>
-                        <li>News</li>
-                        <li>Clothing</li>
-                        <li>Shopping</li>
-                        <li>Jeans</li>
-                        <li>trend</li>
+                    <ul class="block-tags__list">
+                        <li class="block-tags__item">Fashion</li>
+                        <li class="block-tags__item">New York</li>
+                        <li class="block-tags__item">London</li>
+                        <li class="block-tags__item">Hats</li>
+                        <li class="block-tags__item">Norway</li>
+                        <li class="block-tags__item">Sweaters</li>
+                        <li class="block-tags__item">Ideas</li>
+                        <li class="block-tags__item">Deals</li>
+                        <li class="block-tags__item">Accessories</li>
+                        <li class="block-tags__item">News</li>
+                        <li class="block-tags__item">Clothing</li>
+                        <li class="block-tags__item">Shopping</li>
+                        <li class="block-tags__item">Jeans</li>
+                        <li class="block-tags__item">trend</li>
                     </ul>
                 </div>
-                <div class="block-medium">
+                <div class="block-inspiration">
                     <h5 class="sub-title">Inspiration</h5>
                     <div>
-                        <img class="img-size" src="./images/jeans.jpg" alt="jean">
-                        <img class="img-size" src="./images/avatar_hat.jpg" alt="avatar_hat">
-                        <img class="img-size" src="./images/team1.jpg" alt="team_1">
-                        <img class="img-size"src="./images/team4.jpg" alt="team_4">
+                        <img class="img__size--medium" src="./images/jeans.jpg" alt="jean">
+                        <img class="img__size--medium" src="./images/avatar_hat.jpg" alt="avatar_hat">
+                        <img class="img__size--medium" src="./images/team1.jpg" alt="team_1">
+                        <img class="img__size--medium"src="./images/team4.jpg" alt="team_4">
                     </div>
                 </div>
-                <div class="block-small">
-                    <h5 class="sub-title">Follow Me</p>
-                    <ul >
-                        <li><i class="fa-brands fa-facebook-f" ></i></li>
-                        <li ><i class="fa-brands fa-instagram" style="color: #fafafa;"></i></li>
-                        <li >..</li>
-                        <li><i class="fa-solid fa-bell"></i></li>
-                        <li ><i class="fa-brands fa-twitter" style="color: #fafafa;"></i></li>
-                        <li ><i class="fa-brands fa-linkedin-in" style="color: #ffffff;"></i></li>
-                    </ul>
+                <div class="block-follow-me">
+                    <h5 class="sub-title">Follow Me</h5>
+                    <div class="block-follow-me__social">
+                        <ul class="block-follow-me__social-list">
+                            <li class="block-follow-me__social-item"><i class="fa-brands fa-square-facebook"></i>
+                            <li class="block-follow-me__social-item"><i class="fa-brands fa-instagram"></i></li>
+                            <li class="block-follow-me__social-item"><i class="fa-solid fa-bell"></i></li>
+                            <li class="block-follow-me__social-item"><i class="fa-brands fa-twitter"></i></li>
+                            <li class="block-follow-me__social-item"><i class="fa-brands fa-linkedin-in"></i></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="block-small">
+
+                <div class="block-subscribe">
                     <h5 class="sub-title">Subsribe</h5>
+                    <div class="block-subscribe__input-email">
+                        <p>Enter your e-mail bellow and get notified on the latest blog posts</p>
+                        <input type="email"> 
+                        <button>Subscribe</button>
+                    </div>
                 </div>
             </div>
         </div>
