nop bai html/css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- Meterial icon -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />    
+
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">    
@@ -22,8 +25,12 @@
     <nav class="social-meida">
         <ul class="social-meida__list">
             <li class="social-meida__list-item social-meida__list-item--fb"><i class="fa-brands fa-facebook-f" ></i></li>
-            <li class="social-meida__list-item"><i class="fa-brands fa-instagram" style="color: #fafafa;"></i></li>
-            <li class="social-meida__list-item">..</li>
+            <li class="social-meida__list-item social-meida__list-item--instagram"><i class="fa-brands fa-instagram" style="color: #fafafa;"></i></li>
+            <li class="social-meida__list-item social-meida__list-item--colon">
+                <span class="material-symbols-outlined">
+                    more_horiz
+                </span>
+            </li>
             <li class="social-meida__list-item social-media__list-item--bell"><i class="fa-solid fa-bell"></i></li>
             <li class="social-meida__list-item"><i class="fa-brands fa-twitter" style="color: #fafafa;"></i></li>
             <li class="social-meida__list-item"><i class="fa-brands fa-linkedin-in" style="color: #ffffff;"></i></li>
